tests/neg/simple/26-bounded-poly.ts


function foo<V extends number>(x: number): number {
    return x;
}

export function main() {
    assert(foo(2)
    ===
     3);
}
